<resources>
    <string name="app_name">Nossa Fortaleza</string>
    <string name="atracoes">Atrações</string>
    <string name="praias">Praias</string>
    <string name="artesanato">Artesanato</string>
    <string name="shoppings">Shoppings</string>
    <string name="pracas">Praças</string>
    <string name="parques_aquaticos">Parques Aquaticos</string>
    <string name="banner_fortaleza">Banner Fortaleza</string>
    <string name="fortaleza">Fortaleza</string>
    <string name="ceart">Central de Artesanato do Ceará - CeArt</string>
    <string name="desc_ceart">Atualmente, a Central de Artesanato do Ceará (Ceart) conta com cerca de 42 mil artesãos cadastrados. O público-alvo da Ceart são os grupos produtivos e entidades artesanais, além dos artesãos individuais de todo o Ceará.</string>
    <string name="local_ceart">Avenida Santos Dumont, 1589</string>
    <string name="emcetur">Centro de Turismo de Fortaleza</string>
    <string name="desc_emcetur">Quando se fala em cultura e artesanato no Ceará, praticamente falamos do Centro de Turismo do Ceará. A EMCETUR foi inaugurada no início dos anos 70, onde desde o final dos anos 1800 funcionava o primeiro presídio do Ceará. Totalmente reformulado, você encontrará alguns galpões com o melhor do artesanato cearense e alguns outros atrativos. </string>
    <string name="local_emcetur">Rua Senador Pompeu, 350</string>
    <string name="mCentralFortaleza">Mercado Central de Fortaleza</string>
    <string name="desc_mCentralFortaleza">O Mercado Central de Fortaleza é um mercado especializado em produtos artesanais cearenses localizado na cidade de Fortaleza, Ceará, Brasil. É de propriedade da prefeitura municipal.</string>
    <string name="local_mCentralFortaleza">Av. Alberto Nepomuceno, 199</string>
    <string name="fBeiraMar">Feirinha da Beira Mar</string>
    <string name="desc_fBeiraMar">A feira tem uma localização ótima para turistas, no calçadão da praia de Meireles, e oferece grande variedade de produtos. Por lá você encontrará castanhas variadas, vestidos, bolsas, sapatos de couro, tecidos bordados, camisas etc</string>
    <string name="local_fBeiraMar">Av. Beira Mar, Meireles</string>
    <string name="praia_de_iracema">Praia de Iracema</string>
    <string name="local_praia_de_iracema">6 Km do Centro</string>
    <string name="desc_praia_de_iracema">As águas claras da praia de Iracema são poluídas, mas seu calçadão está sempre cheio de gente correndo, caminhando ou apenas contemplando o mar de ondas fortes. A grande quantidade de bares e de restaurantes garante burburinho dia e noite, mas é à tardinha que o movimento aumenta, principalmente na Ponte Metálica (ou dos Ingleses), uma plataforma que avança mar adentro e local perfeito para se despedir do sol.</string>
    <string name="praia_do_meireles">Praia do Meireles</string>
    <string name="local_praia_do_meireles">11 Km do Centro</string>
    <string name="desc_praia_do_meireles">É a parte mais movimentada da Avenida Beira-Mar, com muitos hotéis. Caminhar ou correr no calçadão é o programa para o fim de tarde, quando também tem início a movimentada feirinha noturna</string>
    <string name="praia_do_futuro">Praia do Futuro</string>
    <string name="local_praia_do_futuro">19 Km do Centro</string>
    <string name="desc_praia_do_futuro">Preferida dos banhistas, a praia do Futuro ocupa oito dos 25 quilômetros da orla da capital,com direito a areias fofas e claras, ondas fortes e dunas. Limpa e bonita, abriga ao longo de seu calçadão diversas barracas que oferecem duchas de água doce, cadeiras de praia e delícias da gastronomia regional. </string>
    <string name="praia_do_mucuripe">Praia do Mucuripe</string>
    <string name="local_praia_do_mucuripe">9 Km do Centro</string>
    <string name="desc_praia_do_mucuripe">A tranquila enseada de Mucuripe é reduto da comunidade caiçara em pleno centro urbano. Tem areias claras e fofas, coqueiros, quadras de esportes e muitas jangadas que lá aportam repletas de lagostas. Um bom programa no final da tarde é beliscar nas barracas do Mercado do Peixe, onde estão os pescados mais frescos de Fortaleza.</string>
    <string name="shopping_centerUm">Shopping Center UM </string>
    <string name="shopping_Iguatemi">Shopping Iguatemi</string>
    <string name="shopping_RioMar">Shopping Center Rio Mar</string>
    <string name="shopping_mercadao">Mercadão Shopping</string>
    <string name="shopping_eusebio">Shopping Center Marcadão</string>
    <string name="praca_lagamar">Pracinha do Lagamar</string>
    <string name="praca_messejana">Praça da Messejana</string>
    <string name="praca_luiza_tavora">Praça Luiza Távora</string>
    <string name="praca_dos_leoes">Praça dos Leões</string>
    <string name="praca_joao_tome">Praça Eng. João Tomé</string>
    <string name="parque_beachPark">Beach Park</string>
    <string name="parque_beachPark_desc">Beach Park é um complexo turístico do litoral do Nordeste do Brasil, na praia de Porto das Dunas</string>
    <string name="parque_beachpark_local">16 Km de Fortaleza</string>
    <string name="parque_ytacaranha">Ytacaranha Park</string>
    <string name="parque_ytacaranha_desc">O Ytacaranha Park é um complexo turístico que dispõe de um maravilhoso parque aquático e um confortável Hotel de Praia</string>
    <string name="parque_ytacaranha_local">220 Km de Fortaleza</string>


</resources>
